# deepsearch-core

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: eval.yml  publish.yml  test.yml
deepsearch_core/: __init__.py  config.py  exceptions.py  facade.py
deepsearch_core/adapters/: __init__.py
deepsearch_core/adapters/cli/: __init__.py  main.py
deepsearch_core/adapters/http/: __init__.py  app.py
deepsearch_core/adapters/mcp/: __init__.py  __main__.py  server.py
deepsearch_core/agents/: __init__.py  base.py  critic.py  fan_out.py  planner.py  reporter.py  researcher.py  supervisor.py
deepsearch_core/engine/: __init__.py  events.py  fast_lane.py  manager.py  runner.py  state.py  steer.py
deepsearch_core/llm/: __init__.py  client.py
deepsearch_core/policy/: __init__.py  loader.py
deepsearch_core/policy/policies/: academic.yml  finance.yml  general.yml  tech.yml
deepsearch_core/prompts/: __init__.py  critic.py  planner.py  reporter.py  researcher.py  supervisor.py
deepsearch_core/reranker/: __init__.py  base.py  cohere.py
deepsearch_core/retrieval/: __init__.py  dedup.py  hyde.py  policy_filter.py  query_expansion.py
deepsearch_core/search/: __init__.py  base.py  crossref.py  duckduckgo.py  firecrawl.py  jina_reader.py  multi_engine.py  serper.py  tavily.py
deepsearch_core/store/: __init__.py  schema.py  store.py
docs/: ARCHITECTURE.md  BLUEPRINT.md  CONTRIBUTING.md  DEPLOYMENT.md  EVAL_HARNESS.md  MCP_PROTOCOL.md  PRODUCTION_SPEC.md  PRODUCTION_TODO.md  SOURCE_POLICY.md  STEER_DESIGN.md
eval/: runner.py
eval/datasets/: finance.jsonl  general.jsonl
examples/: 01_quick_search.py  02_deep_search_with_steer.py  03_custom_policy.py  04_streaming.py  05_finance_use_case.py
scripts/: benchmark.py  install_mcp.sh
tests/: conftest.py
tests/integration/: test_facade_smoke.py
tests/unit/: test_completed_payload_error.py  test_dedup.py  test_event_bus.py  test_evidence_event.py  test_facade_kwargs.py  test_fast_lane_partial.py  test_lifecycle_race.py  test_manager.py  test_migration.py  test_policy.py  test_runner.py  test_state.py  test_steer.py  test_store.py
